# subgenre

./: .gitignore  AGENTS.md  README.md  pyproject.toml
music_organizer/: __init__.py  __main__.py  audio_info.py  cli.py  enrich.py  mb.py  organize.py  scan.py  sidecar.py  tags.py  watch_cmd.py
subgenre/: __init__.py  __main__.py  cli.py  config_store.py  copy.py  deploy_cmd.py  enrich.py  features_local.py  mb.py  organize.py  scan.py  setup_cmd.py  sidecar.py  spotify_audio.py  tags.py  theme.py  watch_cmd.py
tests/: test_cli.py
