[project]
name = "music-organizer"
version = "0.1.0"
description = "Scan, enrich, and organize local audio files by tags"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "mutagen>=1.47",
  "musicbrainzngs>=0.7.1",
  "requests>=2.28",
  "watchdog>=3.0",
]

[project.optional-dependencies]
audio = [
  "librosa>=0.10",
  "numpy>=1.22",
  "soundfile>=0.12",
]

[project.scripts]
music-organizer = "music_organizer.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["music_organizer"]
