[project]
name = "subgenre"
version = "0.5.0"
description = "Organize local audio by subgenre; enrich tags; watch folders; learn genres from calibration"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "mutagen>=1.47",
  "musicbrainzngs>=0.7.1",
  "requests>=2.28",
  "watchdog>=3.0",
  "typer>=0.12",
  "rich>=13.7",
]

[project.optional-dependencies]
audio = [
  "librosa>=0.10",
  "numpy>=1.22",
  "soundfile>=0.12",
]
dev = [
  "pytest>=8.0",
]

[project.scripts]
subgenre = "subgenre.cli:main"
sg = "subgenre.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["subgenre"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
